-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
Crash on server during testing.
BUG: unable to handle kernel NULL pointer dereference at 0000000000000b48 Oops: 0002 [#1] SMP CPU: 6 PID: 7226 Comm: ldlm_bl_01 Kdump: loaded 3.10.0-1160.80.1.el7_lustre.ddn16.x86_64 #1 RIP: osd_object_delete+0x27b/0x370 [osd_ldiskfs] Call Trace: lu_object_free.isra.30+0x68/0x170 [obdclass] lu_object_put+0xc5/0x3c0 [obdclass] ldlm_dom_discard_cp_ast+0xb1/0x2b0 [mdt] ldlm_work_cp_ast_lock+0xa8/0x1e0 [ptlrpc] ptlrpc_set_wait+0x72/0x790 [ptlrpc] ldlm_run_ast_work+0xd5/0x3a0 [ptlrpc] __ldlm_reprocess_all+0x11f/0x360 [ptlrpc] ldlm_reprocess_all+0x13/0x20 [ptlrpc] ldlm_cli_cancel_local+0x2ce/0x420 [ptlrpc] ldlm_cli_cancel+0x10a/0x530 [ptlrpc] ldlm_blocking_ast_nocheck+0xa4/0x310 [ptlrpc] ldlm_blocking_ast+0x13a/0x170 [ptlrpc] ldlm_handle_bl_callback+0xdd/0x430 [ptlrpc] ldlm_bl_thread_main+0x5b9/0xac0 [ptlrpc]